--- a/blog/2023-02-28.mdx
+++ b/blog/2023-02-28.mdx
@@ -5,7 +5,7 @@ title: February 2023
 ## Memfault Support for RISC-V on ESP32-C3 Devices
 
 Memfault now supports RISC-V on ESP32-C3 devices. By following the steps in the
-[iESP32 ESP-IDF](/docs/mcu/esp32-guide/) integration guide, you will be able to
+[ESP32 ESP-IDF](/docs/mcu/esp32-guide/) integration guide, you will be able to
 integrate the Memfault Firmware SDK into a system that is using the
 [ESP-IDF](https://docs.espressif.com/projects/esp-idf), including the ESP32-C3
 chip. The integration guide assumes you already have a working project/toolchain
