--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -403,8 +403,12 @@ adb shell am broadcast \
   --es com.memfault.intent.extra.PROJECT_KEY "your_new_project_key"
 ```
 
-:::note Changing the project key will delete all pending MAR files queued to be
-uploaded. :::
+:::note
+
+Changing the project key will delete all pending MAR files queued to be
+uploaded.
+
+:::
 
 ### Software Versions, Hardware Versions and Device Serials
 
