Remove dupe CDR rate limiting table entry (#432)
I added details on the limits in 2c512790603c41f822d9b8e46b3d15bfecb066d9,
but didn't realize I was duplicating an existing row :(. Consolidate them.

--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -68,6 +68,8 @@ Below is a list of the APIs and payloads that may be rate-limited:
           Custom Data Recordings (CDR){" "}
         </Link>
         are sets of user defined data of any custom format that are sent from a device.
+        Limited to 1 CDR upload per device per 24-hour period, and a maximum size
+        of 16MB per CDR upload payload
       </td>
     </tr>
     <tr id="reboot-events">
@@ -159,18 +161,6 @@ Below is a list of the APIs and payloads that may be rate-limited:
         <Link to="/docs/android/custom-events">Custom Events</Link> are
         batch-uploaded by Bort periodically and also when the number of pending
         events reaches a threshold (by default, 1000 events).
-      </td>
-    </tr>
-    <tr id="custom-data-recordings">
-      <td>Custom Data Recording</td>
-      <td>Device</td>
-      <td>All</td>
-      <td>
-        <Link to="/docs/platform/inspecting-a-device/#custom-data-recordings">
-          Custom Data Recordings
-        </Link>{" "}
-        are limited to 1 CDR upload per device per 24-hour period, and a maximum
-        size of 16MB per CDR upload payload
       </td>
     </tr>
   </tbody>
