--- a/docs/android/android-getting-started-guide.mdx
+++ b/docs/android/android-getting-started-guide.mdx
@@ -277,6 +277,8 @@ Once in development mode:
 - Device configuration update can also be requested on-demand. This will trigger
   Bort to update settings from the Memfault server, including the fleet-sampling
   configuration.
+- From Bort 4.5.0 onwards: All client-side rate limits are bypassed. Server-side
+  rate-limits may still be in effect.
 
 To enable development mode (change `true` to `false` to disable):
 
