Add hardware version overwrite section (#441)
* add hardware version overwrite section

* Prettified Code!

* Update docs/platform/software-version-hardware-version.mdx

Co-authored-by: Ville Lindholm <ville@memfault.com>

* Prettified Code!

---------

Co-authored-by: can-memfault <can-memfault@users.noreply.github.com>
Co-authored-by: Ville Lindholm <ville@memfault.com>

--- a/docs/platform/software-version-hardware-version.mdx
+++ b/docs/platform/software-version-hardware-version.mdx
@@ -22,6 +22,14 @@ can be used to identify different device types being tracked in the same Project
 (i.e. `smart-toaster` and `smart-oven`) and different board revisions of the
 same device type (i.e. `smart-toaster-evt`, `smart-toaster-pvt`, etc.).
 
+:::info
+
+By default, the hardware version of an individual Device gets recorded _once_
+(the first time they report in to Memfault). To make this value rewritable,
+please contact us at [support@memfault.com](mailto:support@memfault.com).
+
+:::
+
 ### MCU
 
 The software running on your devices will need to report its Hardware Version.
