Custom events will be deprecated (#446)
* Custom events will be deprecated

---------

Co-authored-by: sjp4 <sjp4@users.noreply.github.com>
Co-authored-by: Chris Hayes <chayes@memfault.com>

--- a/docs/android/custom-events.mdx
+++ b/docs/android/custom-events.mdx
@@ -4,6 +4,20 @@ title: Android Custom Events
 sidebar_label: Custom Events
 ---
 
+:::caution
+
+Custom Events will be deprecated in a future Bort SDK release, replaced by
+[High Resolution Telemetry (HRT)](/docs/android/android-custom-metrics/#high-resolution-telemetry-hrt).
+This will offer comparable functionality (viewing individual events on the
+device timeline) while also allowing the use of attributes/timeseries metrics
+from these events.
+
+HRT is supported from Bort 4.5.0. Please start to use this instead of Custom
+Events. In a future release, all Custom Events will be processed as Custom
+Metrics.
+
+:::
+
 :::info
 
 Custom Events were previously called Structured Logs. This API was changed in
